--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,13 @@ services:
     ports:
       - 9200:9200
       - 9300:9300
+  kibana:
+      image: docker.elastic.co/kibana/kibana:7.10.0
+      container_name: kibana
+      environment:
+        - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
+      ports:
+        - 5601:5601      
 volumes:
   esdata1:
     driver: local
